refactor: optimize master search filtering